force-app/main/default/objects/Employee_Mileage__c/Employee_Mileage__c.object-meta.xml
<CustomObject>
    <label>Employee Mileage</label>
    <nameField>
        <label>Employee Mileage Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Employees Mileage</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>