force-app/main/default/objects/Employee_Mileage__c/fields/Carry_Forward_Mileage__c.field-meta.xml
<CustomField>
    <fullName>Carry_Forward_Mileage__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If this checkbox is true then it should be carry forward mileage to next months reimbursement and if false it should be as it is</inlineHelpText>
    <label>Carry Forward Mileage</label>
    <type>Checkbox</type>
</CustomField>