force-app/main/default/objects/Employee_Mileage__c/fields/Contact_Email_Id__c.field-meta.xml
<CustomField>
    <fullName>Contact_Email_Id__c</fullName>
    <label>Contact Email Id</label>
    <required>true</required>
    <type>Email</type>
</CustomField>