force-app/main/default/objects/Employee_Mileage__c/fields/Day_Of_Week__c.field-meta.xml
<CustomField>
    <fullName>Day_Of_Week__c</fullName>
    <label>Day Of Week</label>
    <length>20</length>
    <type>Text</type>
</CustomField>