force-app/main/default/objects/Employee_Mileage__c/fields/Drive_Stay_Time__c.field-meta.xml
<CustomField>
    <fullName>Drive_Stay_Time__c</fullName>
    <formula>Driving_Time__c + Stay_Time__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Drive Stay Time</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>