force-app/main/default/objects/Employee_Mileage__c/fields/Driving_Time__c.field-meta.xml
<CustomField>
    <fullName>Driving_Time__c</fullName>
    <formula>IF(!ISNULL(ConvertedEndTime__c)  &amp;&amp; !ISNULL(ConvertedStartTime__c) , (ConvertedEndTime__c - ConvertedStartTime__c )*24*60, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Driving Time</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>