force-app/main/default/objects/Employee_Mileage__c/fields/EmployeeReimbursement__c.field-meta.xml
<CustomField>
    <fullName>EmployeeReimbursement__c</fullName>
    <label>Employee Reimbursement</label>
    <referenceTo>Employee_Reimbursement__c</referenceTo>
    <relationshipLabel>Employees Mileage</relationshipLabel>
    <relationshipName>Employees_Mileage</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>