force-app/main/default/objects/Employee_Mileage__c/fields/From_Previous_Months__c.field-meta.xml
<CustomField>
    <fullName>From_Previous_Months__c</fullName>
    <defaultValue>false</defaultValue>
    <label>From Previous Months</label>
    <type>Checkbox</type>
</CustomField>