force-app/main/default/objects/Employee_Mileage__c/fields/FromLocationId__c.field-meta.xml
<CustomField>
    <fullName>FromLocationId__c</fullName>
    <label>FromLocationId</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>