force-app/main/default/objects/Employee_Mileage__c/fields/Fuel_price__c.field-meta.xml
<CustomField>
    <fullName>Fuel_price__c</fullName>
    <label>Fuel price</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>