force-app/main/default/objects/Employee_Mileage__c/fields/ManagerEmailid__c.field-meta.xml
<CustomField>
    <fullName>ManagerEmailid__c</fullName>
    <label>Manager Email Id</label>
    <type>Email</type>
</CustomField>