force-app/main/default/objects/Employee_Mileage__c/fields/Max_Allowable__c.field-meta.xml
<CustomField>
    <fullName>Max_Allowable__c</fullName>
    <formula>IF(Trip_Date_Month__c == 12, Mileage__c * 0.5400, Mileage__c * 0.5350)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Max Allowable</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>