force-app/main/default/objects/Employee_Mileage__c/fields/MPG__c.field-meta.xml
<CustomField>
    <fullName>MPG__c</fullName>
    <label>MPG</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>