force-app/main/default/objects/Employee_Mileage__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Employees Mileage</relationshipLabel>
    <relationshipName>Employees_Mileage_to_Opportunity</relationshipName>
    <type>Lookup</type>
</CustomField>