force-app/main/default/objects/Employee_Mileage__c/fields/Origin_Name__c.field-meta.xml
<CustomField>
    <fullName>Origin_Name__c</fullName>
    <description>Origin Name</description>
    <inlineHelpText>Origin Name</inlineHelpText>
    <label>Origin Name</label>
    <type>TextArea</type>
</CustomField>