force-app/main/default/objects/Employee_Mileage__c/fields/StartTime__c.field-meta.xml
<CustomField>
    <fullName>StartTime__c</fullName>
    <description>Start date and time of the trips.</description>
    <label>StartTime</label>
    <type>DateTime</type>
</CustomField>