force-app/main/default/objects/Employee_Mileage__c/fields/Tag__c.field-meta.xml
<CustomField>
    <fullName>Tag__c</fullName>
    <label>Tag</label>
    <length>150</length>
    <type>Text</type>
</CustomField>