force-app/main/default/objects/Employee_Mileage__c/fields/TimeZone__c.field-meta.xml
<CustomField>
    <fullName>TimeZone__c</fullName>
    <label>TimeZone</label>
    <length>25</length>
    <type>Text</type>
</CustomField>