force-app/main/default/objects/Employee_Mileage__c/fields/ToLocationId__c.field-meta.xml
<CustomField>
    <fullName>ToLocationId__c</fullName>
    <label>ToLocationId</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>