force-app/main/default/objects/Employee_Mileage__c/fields/Total_Time__c.field-meta.xml
<CustomField>
    <fullName>Total_Time__c</fullName>
    <formula>Stay_Time__c + Driving_Time__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Time</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>