force-app/main/default/objects/Employee_Mileage__c/fields/Trip_Date_Month__c.field-meta.xml
<CustomField>
    <fullName>Trip_Date_Month__c</fullName>
    <formula>CASE(MONTH(Trip_Date__c), 1, 1, 2, 2, 3, 3,  4, 4,  5, 5,  6, 6, 7, 7, 8, 8, 9, 9, 10, 10, 11, 11, 12, 12, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Trip Date Month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>