force-app/main/default/objects/Employee_Mileage__c/fields/Trip_Destination__c.field-meta.xml
<CustomField>
    <fullName>Trip_Destination__c</fullName>
    <label>Trip Destination</label>
    <length>255</length>
    <type>Text</type>
</CustomField>