force-app/main/default/objects/Employee_Mileage__c/fields/Trip_Destination_State__c.field-meta.xml
<CustomField>
    <fullName>Trip_Destination_State__c</fullName>
    <formula>If( AND(ISNUMBER(RIGHT(Trip_Destination__c, 4)), ISNUMBER(LEFT(RIGHT(Trip_Destination__c, 9),3)) != true, LEN(TRIM(LEFT(RIGHT(Trip_Destination__c, 9),3)))==2 ) ,TRIM(LEFT(RIGHT(Trip_Destination__c, 9),3)), EmployeeReimbursement__r.Contact_Id__r.MailingState )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Trip Destination State</label>
    <type>Text</type>
</CustomField>