force-app/main/default/objects/Employee_Mileage__c/fields/Trip_Id__c.field-meta.xml
<CustomField>
    <fullName>Trip_Id__c</fullName>
    <externalId>true</externalId>
    <label>Trip Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>