force-app/main/default/objects/Employee_Mileage__c/fields/Trip_Origin__c.field-meta.xml
<CustomField>
    <fullName>Trip_Origin__c</fullName>
    <label>Trip Origin</label>
    <length>255</length>
    <type>Text</type>
</CustomField>