force-app/main/default/objects/Employee_Mileage__c/fields/Trip_Origin_State__c.field-meta.xml
<CustomField>
    <fullName>Trip_Origin_State__c</fullName>
    <formula>If( AND(ISNUMBER(RIGHT(Trip_Origin__c, 4)), ISNUMBER(LEFT(RIGHT(Trip_Origin__c, 9),3)) != true , LEN(TRIM(LEFT(RIGHT(Trip_Origin__c, 9),3))) == 2) ,TRIM(LEFT(RIGHT(Trip_Origin__c, 9),3)), EmployeeReimbursement__r.Contact_Id__r.MailingState)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Trip Origin State</label>
    <type>Text</type>
</CustomField>