force-app/main/default/objects/Employee_Mileage__c/fields/Variable__c.field-meta.xml
<CustomField>
    <fullName>Variable__c</fullName>
    <formula>IF( OR(ISNULL(MPG__c), MPG__c = 0), (Fuel_price__c + Maintenance_and_Tires__c )* Mileage__c, (( Fuel_price__c  /  MPG__c )+ Maintenance_and_Tires__c )* Mileage__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Variable</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>