force-app/main/default/objects/Employee_Mileage__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>EmployeeReimbursement__c</columns>
    <columns>Mileage__c</columns>
    <columns>Trip_Date__c</columns>
    <columns>Contact_Email_Id__c</columns>
    <columns>Trip_Destination__c</columns>
    <columns>Trip_Origin__c</columns>
    <columns>Trip_Status__c</columns>
    <columns>Fuel_price__c</columns>
    <columns>Maintenance_and_Tires__c</columns>
    <columns>MPG__c</columns>
    <columns>Variable__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>