force-app/main/default/objects/Employee_Mileage__c/listViews/unApproved_Mileages.listView-meta.xml
<ListView>
    <fullName>unApproved_Mileages</fullName>
    <columns>NAME</columns>
    <columns>EmployeeReimbursement__c</columns>
    <columns>Contact_Email_Id__c</columns>
    <columns>ManagerEmailid__c</columns>
    <columns>Approved_Date__c</columns>
    <columns>Fuel_price__c</columns>
    <columns>MPG__c</columns>
    <columns>Mileage__c</columns>
    <columns>Rejected__c</columns>
    <columns>Trip_Date__c</columns>
    <columns>Trip_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Trip_Status__c</field>
        <operation>equals</operation>
        <value>No Approved Yet</value>
    </filters>
    <filters>
        <field>EmployeeReimbursement__c</field>
        <operation>contains</operation>
        <value>03-2018</value>
    </filters>
    <filters>
        <field>Contact_Email_Id__c</field>
        <operation>contains</operation>
        <value>valetwaste</value>
    </filters>
    <label>unApproved Mileages</label>
</ListView>